[package]
name = "guppybot"
version = "0.0.0"
edition = "2018"
authors = ["Peter Jin <peter@guppybot.org>"]
workspace = "../tools"

[dependencies]
chrono = "^0.4"
crossbeam-channel = "^0.3"
ctrlc = "^3.1"
#curl = "^0.4"
minisodium = { path = "../../minisodium" }
schemas = { path = "../../schemas" }
#semver = "^0.9"
#serde_json = "^1.0"
#tempfile = "^3.0"
tooling = { path = "../tooling" }
#url = "^1.7"
ws = { version = "^0.8", features = ["ssl"] }
