[package]
name = "guppybot"
version = "0.0.0"
edition = "2018"
authors = ["Peter Jin <peter@guppybot.org>"]
license = "MIT OR Apache-2.0"
workspace = "../tools"

[dependencies]
base64 = "^0.10"
bincode = "^1.1"
byteorder = "^1.3"
chrono = "^0.4"
crossbeam-channel = "^0.3"
ctrlc = "^3.1"
dirs = "^1.0"
monosodium = { path = "../monosodium" }
parking_lot = "^0.7"
rand = "^0.6"
schemas = { path = "../schemas" }
serde = "^1.0"
toml = "^0.4"
tooling = { path = "../tooling" }
ws = { version = "^0.8", features = ["ssl"] }
