[package]
name = "guppyctl"
version = "0.0.0"
edition = "2018"
authors = ["Peter Jin <peter@guppybot.org>"]
license = "MIT OR Apache-2.0"
workspace = "../tools"

[dependencies]
clap = "~2.32.0"
crossbeam-utils = "^0.6"
curl = "^0.4"
monosodium = { path = "../monosodium" }
schemas = { path = "../../schemas" }
semver = "^0.9"
serde_json = "^1.0"
tempfile = "^3.0"
tooling = { path = "../tooling" }
url = "^1.7"
