[package]
name = "tooling"
version = "0.0.0"
edition = "2018"
authors = ["Peter Jin <peter@guppybot.org>"]
license = "MIT OR Apache-2.0"
workspace = "../tools"

[build-dependencies]
walkdir = "^2.2"

[dependencies]
base64 = "^0.10"
bincode = "^1.1"
byteorder = "^1.3"
chrono = "^0.4"
crossbeam-channel = "^0.3"
hex = "^0.3"
libloading = "^0.5"
monosodium = { path = "../monosodium" }
num_cpus = "^1.10"
schemas = { path = "../../schemas" }
serde = "^1.0"
serde_derive = "^1.0"
tempfile = "^3.0"
toml = "^0.4"
url = "^1.7"
ws = { version = "^0.8", features = ["ssl"] }
