[package]
name = "guppybot-bin"
version = "0.0.0"
edition = "2018"
authors = ["Peter Jin <peter@guppybot.org>"]
license = "MIT OR Apache-2.0"
workspace = ".."

[dependencies]
git_version = { path = "../../git_version" }
guppybot = { path = "../../guppybot" }

[[bin]]
name = "guppybot"
path = "main.rs"
